# in-and-out

./: .dockerignore  .gitignore  BACKLOG.md  CONFIG_DESIGN.md  Dockerfile  GOAL.md  PLAN_DOCUMENTATION.md  PLAN_MODULARIZATION.md  PLAN_ONBOARDING_BLUE_GREEN.md  PLAN_ONBOARDING_SHADOW_MODE.md  PLAN_PG_TRICKLE_ONBOARDING.md  PLAN_RECORD_LINKAGE.md  PLAN_SIMULATOR_AUTH.md  PLAN_SIMULATOR_DECOUPLING.md  PLAN_STATEFUL_SIMULATOR.md  PLAN_WEBHOOK_REGISTRATION.md  README.md  REPORT_ECOSYSTEM.md  REPORT_IMPACT_NON_HTTP_INGESTION.md  REPORT_IMPACT_NON_HTTP_WRITEBACK.md  REPORT_OSI_MAPPING.md  REPORT_PG_TRICKLE.md  REPORT_PROGRAMMING_LANGUAGES.md  REPORT_PYTHON_FOR_RESEARCH_PHASE.md  REPORT_SCOPE_CREEP.md  _fix_atomicity_test.py  alembic.ini  conftest.py  docker-compose.observability.yml  docker-compose.yml  justfile  pyproject.toml  tmp_diag.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
.hypothesis/constants/: 0021e5c025ee8010  0190f8491daaeefd  02e2f6bf8d565faf  03e7b7492e08ba63  04e0fc99d45e1f5b  0604938d37c249cf  068dea2e9d05ded4  06d3b346bbb64b32  08b50d54baf77b4b  09622d1151adff04  0a3298d82721a6d3  0cf5cb138823ac1c  0d79225f6873d1f9  0e8d04e3726553f7  118177d7630aafae  1319df8b287f543f  1758d9b1345906e0  20dce3a7120da201  212bc2b78c9f0268  21b07310dddf2de4  245c94b93fb19c28  246c53a26e5e0e47  24dfc85affb854f0  284ceda35eea1450  2897438b1d7e0788  2908a47d91b4ace5  29d4bb2c2778f1ca  2a7d46d93508b5ad  2a8f41ea0a65a655  2d38f2a17b087b62  2d7808bb73dddb7a  3004efeedf462132  308e059f5e48e419  3127f56913f36766  329b17646b430b06  329d122b21766ca2  33fd2efc7872dcfd  3425a9fb7f9a0872  3457e182e9d856ff  353a2f00321bf455  (+163 more)
book/: book.toml
book/src/: SUMMARY.md  architecture.md  cli.md  configuration.md  connector-authoring.md  credential-providers.md  database.md  dead-letter-policy.md  deployment.md  faq.md  getting-started.md  ingestion-hooks.md  installation.md  introduction.md  lifecycle-events.md  osi-mapping-contract.md  plugin-hooks.md  troubleshooting.md  writeback-hooks.md
book/theme/: custom.css
config/: ingestion.yaml  writeback.yaml
connectors/: hubspot.example.yaml  reference.example.yaml  salesforce.example.yaml  tripletex.example.yaml
docs/: CONNECTOR_AUTHORING.md  DEPLOYMENT.md  SCHEMA_CONTRACT.md  TROUBLESHOOTING.md
engine/: Dockerfile  alembic.ini  pyproject.toml
engine/config/: writeback.yaml
engine/tests/: conftest.py
k8s/: configmap.yaml  hpa.yaml  ingest-deployment.yaml  kustomization.yaml  migrate-job.yaml  namespace.yaml  postgres.yaml  secret.yaml  servicemonitor.yaml  writeback-deployment.yaml
migrations/: env.py
migrations/versions/: 003_20260323_webhook_log.py  004_20260323_sync_lock.py  006_20260323_writeback_audit.py  008_20260323_source_table_schema.py  009_20260323_sync_run_columns.py  010_20260323_watermark_columns.py  011_20260323_control_columns.py  013_20260323_sync_run_counters.py  015_20260323_webhook_subscriptions.py  020_20260323_schema_contract_fixes.py  023_20260323_writeback_result_idx.py  025_20260324_writeback_result_protection_level.py
observability/: alertmanager.yml  prometheus.yml
observability/prometheus/: alerts.yml
plans/: INDEX.md  PLAN_COORDINATION_MODEL.md  PLAN_HOUSEKEEPING.md  PLAN_MODULARIZATION.md  PLAN_ONBOARDING_PROPOSAL.md  PLAN_ONBOARDING_SHADOW_MODE.md  PLAN_ONBOARDING_SHADOW_MODE_EXTENDED.md  PLAN_RECORD_LINKAGE.md  PLAN_STATEFUL_SIMULATOR.md  PLAN_WRITEBACK_ECHO_RACE.md  REPORT_OSI_MAPPING.md
schemas/: connector.schema.json
schemas/defs/: auth.schema.json  ingestion.schema.json  pagination.schema.json  simulator.schema.json  webhooks.schema.json  writeback.schema.json
schemas/profiles/: full_duplex.schema.json  ingestion_polling_readonly.schema.json  ingestion_webhook_incremental.schema.json  writeback_patch.schema.json
scripts/: validate_connector_fixtures.py
simulator/: Dockerfile  pyproject.toml
simulator/src/inandout_simulator/: __init__.py  app.py  cli.py  events.py  loader.py  metrics.py  route_builder.py  seed.py  webhooks.py
simulator/src/inandout_simulator/store/: __init__.py  memory.py  postgres.py  sqlite.py
simulator/src/inandout_simulator/ui/: router.py  sse.py
simulator/src/inandout_simulator/ui/templates/: record.html  requests.html  table.html  webhooks.html
simulator/tests/: test_simulator_app.py  test_simulator_events.py  test_simulator_memory_store.py  test_simulator_postgres_store.py  test_simulator_schema_boundary.py
src/: conftest.py
src/inandout/: __init__.py  privacy.py
tests/acceptance/: README.md  conftest.py  test_salesforce_acceptance.py
tests/contract/: conftest.py  test_ingestion_output_contract.py  test_operational_tables_contract.py  test_writeback_contract.py
tests/integration/: conftest.py  test_api.py  test_archive_action.py  test_bulk_export.py  test_checkpoint_resume.py  test_circuit_breaker_lifecycle.py  test_cluster_merge_split_integration.py  test_composite_primary_key.py  test_connector_versioning.py  test_control_commands.py  test_crdt_merge.py  test_dead_letter_replay.py  test_deletion_verification.py  test_dependency_ordering.py  test_diff_fields_client_patch.py  test_distributed_lock.py  test_duplicate_insert_prevention.py  test_e2e_pipeline.py  test_etag_conditional_write.py  test_fan_in.py  test_fan_in_scoping.py  test_graphql_ingestion.py  test_history_mode.py  test_hubspot_writeback.py  test_identity_mapping_on_insert.py  test_ingestion_engine.py  test_intra_sync_deduplication.py  test_last_written_state.py  test_linked_object_resolution.py  test_multi_tenant_ingestion.py  test_osi_mapping_pipeline.py  test_out_of_order_events.py  test_pagination_drift.py  test_parameterized_sources.py  test_payload_schema_validation.py  test_pre_request_auth.py  test_rate_limit_politeness.py  test_replication_slot_monitor.py  test_required_fields_guard.py  test_resync_feedback.py  (+14 more)
tests/load/: README.md  conftest.py  test_connection_pool.py  test_ingestion_throughput.py  test_rate_limiter_load.py  test_writeback_throughput.py
tests/simulators/: test_hubspot_simulator.py  (+3 more)
(+613 files in other folders)
