[project]
name = "inandout-workspace"
version = "0.1.0"
description = "Workspace root — see engine/ and simulator/ for the real packages"
requires-python = ">=3.13"
dependencies = []

# Tell uv this root is not a publishable package — workspace envelope only.
[tool.uv]
package = false

# ---------------------------------------------------------------------------
# uv workspace — engine + simulator as co-installable packages
# ---------------------------------------------------------------------------
[tool.uv.workspace]
members = ["engine", "simulator"]

# ---------------------------------------------------------------------------
# pytest — no tests live at root; each package configures its own
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--tb=short"
markers = [
    "acceptance: marks tests as acceptance tests requiring real external APIs (deselect with '-m not acceptance')",
    "load: marks tests as load/performance tests requiring Docker and extended timeout",
]
